# EAGLE-in-llama.cpp

./: =0.26.0  CMakeCache.txt  CTestTestfile.cmake  cmake_install.cmake  convert_hf_to_gguf.py  convert_hf_to_gguf_update.py  gpt2_example.py  hidden_state_extract_gemini.cpp  test.txt
common/: Makefile  cmake_install.cmake  common.cpp  speculative.cpp  speculative.h
examples/: Makefile  cmake_install.cmake
examples/convert-llama2c-to-ggml/: CTestTestfile.cmake
examples/cvector-generator/: CTestTestfile.cmake  Makefile
examples/embedding/: CTestTestfile.cmake  Makefile
examples/eval-callback/: CTestTestfile.cmake  cmake_install.cmake
examples/export-lora/: Makefile  cmake_install.cmake
examples/gbnf-validator/: CTestTestfile.cmake  cmake_install.cmake
examples/gen-docs/: CTestTestfile.cmake  Makefile  (+1 more)
ggml/: Makefile  ggml-version.cmake
include/: llama.h
llama.cpp/: .gitignore  DartConfiguration.tcl  Makefile  convert_hf_to_gguf.py  convert_hf_to_gguf_update.py  gpt2_example.py  llama.pc  test.txt
llama.cpp/examples/speculative-simple/: CMakeLists.txt  Makefile  README.md  cmake_install.cmake  speculative-eagle.cpp  speculative-gemini.cpp  speculative-simple.cpp
models/: ggml-vocab-bert-bge-large.gguf.out  ggml-vocab-deepseek-v3.gguf.out  ggml-vocab-gigachat.gguf.out  ggml-vocab-jina-v2-de.gguf.out  ggml-vocab-jina-v2-es.gguf.out
pocs/: Makefile  cmake_install.cmake
src/: Makefile  llama-arch.cpp  llama-arch.h  llama-batch.cpp  llama-batch.h  llama-context.cpp  llama-context.h  llama-model.cpp  llama.cpp
tests/: CTestTestfile.cmake
(+145 files in other folders)
